--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bootstrap-notify",
-  "version": "3.1.7",
-  "description": "This is a simple plugin that turns standard Bootstrap alerts into \"Growl-like\" notifications.",
+  "version": "4.0.0",
+  "description": "This is a simple plugin that turns standard Bootstrap toats into \"Growl-like\" notifications.",
   "repository": {
     "type": "git",
     "url": "git://github.com/mouse0270/bootstrap-notify.git"
@@ -14,27 +14,27 @@
     "notifications",
     "growl",
     "message",
-    "notice"
+    "notice",
+	"toast"
   ],
   "author": "mouse0270 <rmcintosh@remabledesigns.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mouse0270/bootstrap-notify/issues"
+    "url": "https://github.com/w8tcha/bootstrap-notify/issues"
   },
-  "homepage": "http://bootstrap-notify.remabledesigns.com/",
+  "homepage": "https://github.com/w8tcha/bootstrap-notify/",
   "main": "bootstrap-notify.js",
   "files": [
     "bootstrap-notify.js",
     "bootstrap-notify.min.js"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.4.0",
+    "grunt": "^1.6.1",
+    "grunt-cli": "^1.4.3",
+    "grunt-contrib-jshint": "^3.2.0",
+    "grunt-contrib-uglify": "^5.2.2",
     "grunt-exec": "^0.4.6",
-    "spacejam": "^1.1.4"
+    "spacejam": "^1.0.0"
   },
   "scripts": {
     "test": "grunt test"
